--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
@@ -8,10 +9,7 @@
         <relativePath/>
     </parent>
     <artifactId>generic-web-api</artifactId>
-    <packaging>jar</packaging>
-
     <name>generic-web-api</name>
-
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -26,7 +24,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>giulius-tests</artifactId>
             <scope>test</scope>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>netty-http-client</artifactId>
@@ -39,7 +37,6 @@
         <dependency>
             <groupId>com.mastfrog</groupId>
             <artifactId>scopes</artifactId>
-            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
