--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
         <connection>scm:git:https://github.com/timboudreau/generic-web-api.git</connection>
         <developerConnection>git@github.com/timboudreau/generic-web-api.git</developerConnection>
     </scm>
+    <organization>
+        <name>Mastfrog Technologies</name>
+        <url>https://mastfrog.com</url>
+    </organization>
     <licenses>
         <license>
             <name>MIT</name>
