--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <relativePath/>
     </parent>
     <artifactId>generic-web-api</artifactId>
+    <url>https://github.com/timboudreau/generic-web-api</url>
     <name>generic-web-api</name>
     <dependencies>
         <dependency>
@@ -43,10 +44,11 @@
         <url>https://github.com/timboudreau/generic-web-api/issues</url>
     </issueManagement>
     <scm>
-        <url>https://github.com/timboudreau/generic-web-api</url>
+        <url>https://github.com/timboudreau/generic-web-api.git</url>
         <connection>scm:git:https://github.com/timboudreau/generic-web-api.git</connection>
         <developerConnection>git@github.com/timboudreau/generic-web-api.git</developerConnection>
     </scm>
+    
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
@@ -54,7 +56,8 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>http://opensource.org/licenses/MIT</url>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     <developers>
